# fabricator

./: Cargo.toml
crates/cli/benches/: scripts.rs
crates/cli/tests/: scripts.rs  vm_hook.rs
crates/cli/tests/scripts/: arrays.fml  assign_ops.fml  block_scope.fml  closure_uniqueness.fml  closures.fml  default_args.fml  empty_blocks.gml  global.gml  if_then_else.fml  init_scope.fml  is_nan.fml  methods.gml  multi_return.gml  multi_value.gml  ops.fml  pcall.fml  short_circuit.fml  simple_function.fml  simple_integer_sum.fml  simple_object.fml  statics.fml  stdlib_struct.fml  structs.fml  try_catch.gml
crates/collision/src/: bound_box_tree.rs
crates/compiler/src/: ast.rs  compiler.rs  constant.rs  ir.rs  ir_gen.rs  lexer.rs  macros.rs  parser.rs  tokens.rs
crates/compiler/src/analysis/: block_simplification.rs  cleanup.rs  constant_folding.rs  dead_code_elim.rs  mod.rs  nested_scope_liveness.rs  ssa_conversion.rs  types_and_effects.rs  variable_liveness.rs
crates/compiler/src/code_gen/: generate.rs  heap_alloc.rs  mod.rs  prototype.rs  upsilon_reachability.rs
crates/fabricator/src/: ffi.rs
crates/fabricator/src/api/: asset.rs  instance.rs  layer.rs  object.rs
crates/fabricator/src/game/: create.rs  maxrects.rs
crates/stdlib/src/: array.rs  core.rs  ds_list.rs  ds_map.rs  ds_priority.rs  json.rs  math.rs  string.rs
crates/util/src/: id_map.rs  typed_id_map.rs
crates/vm/src/: array.rs  builtins.rs  callback.rs  closure.rs  conversion.rs  debug.rs  lib.rs  magic.rs  object.rs  stack.rs  string.rs
crates/vm/src/error/: mod.rs  runtime_error.rs
(+8 files in other folders)
